--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header__top">
             <div class="ps-container">
                 <div class="header__left">
-                    <a class="ps-logo" href="homepage-4.html"><img src="img/logo_light.png" alt=""></a>
+                    <a class="ps-logo" href="index.html"><img src="img/logo_light.png" alt=""></a>
                 </div>
                 <div class="header__center">
                     <form class="ps-form--quick-search" action="http://nouthemes.net/html/martfury/index.html" method="get">
