--- a/product-default.html
+++ b/product-default.html
@@ -33,7 +33,7 @@
         <div class="header__top">
             <div class="ps-container">
                 <div class="header__left">
-                    <a class="ps-logo" href="homepage-4.html"><img src="img/logo_light.png" alt=""></a>
+                    <a class="ps-logo" href="index.html"><img src="img/logo_light.png" alt=""></a>
                 </div>
                 <div class="header__center">
                     <form class="ps-form--quick-search" action="http://nouthemes.net/html/martfury/index.html" method="get">
@@ -198,7 +198,7 @@
     <div class="ps-breadcrumb">
         <div class="ps-container">
             <ul class="breadcrumb">
-                <li><a href="homepage-4.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="shop-default.html">Export Quality Stock</a></li>
                 <li>Sleeve Linen Blend Caro Pane Shirt</li>
             </ul>
