--- a/shop-default.html
+++ b/shop-default.html
@@ -32,7 +32,7 @@
         <div class="header__top">
             <div class="ps-container">
                 <div class="header__left">
-                    <a class="ps-logo" href="index.html"><img src="img/logo_light.png" alt=""></a>
+                    <a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="header__center">
                     <form class="ps-form--quick-search" action="http://nouthemes.net/html/martfury/index.html" method="get">
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="navigation--mobile">
-            <div class="navigation__left"><a class="ps-logo" href="index-2.html"><img src="img/logo_light.png" alt=""></a></div>
+            <div class="navigation__left"><a class="ps-logo" href="index-2.html"><img src="img/logo.png" alt=""></a></div>
             <div class="navigation__right">
                 <div class="header__actions">
                     <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
@@ -196,7 +196,7 @@
     <div class="ps-breadcrumb">
         <div class="ps-container">
             <ul class="breadcrumb">
-                <li><a href="index-2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>Shop</li>
             </ul>
         </div>
