--- a/product-default.html
+++ b/product-default.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="#">Sell on Martfury</a></li>
+                        <li><a href="#">Sell on RMG Stock</a></li>
                         <li><a href="#">Tract your order</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#">US Dollar</a>
@@ -426,7 +426,7 @@
                         <p><i class="icon-credit-card"></i> Pay online or when receiving goods</p>
                     </aside>
                     <aside class="widget widget_sell-on-site">
-                        <p><i class="icon-store"></i> Sell on Martfury?<a href="#"> Register Now !</a></p>
+                        <p><i class="icon-store"></i> Sell on RMG Stock?<a href="#"> Register Now !</a></p>
                     </aside>
                 </div>
             </div>
@@ -775,7 +775,7 @@
                                     <li> Quantity: 1,200 Pieces </li>
                                 </ul>
                             </div>
-                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#">Buy Sample ($5)</a><a class="ps-btn" href="#">Make an Offer</a>
+                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#">Buy Sample($5)</a><a class="ps-btn" href="#">Make Offer</a>
                                 <div class="ps-product__actions"><a href="#"><i class="icon-heart"></i></a><a href="#"><i class="icon-chart-bars"></i></a></div>
                             </div>
                         </div>
