--- a/shop-default.html
+++ b/shop-default.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="#">Sell on Martfury</a></li>
+                        <li><a href="#">Sell on RMG Stock</a></li>
                         <li><a href="#">Tract your order</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#">US Dollar</a>
@@ -1281,7 +1281,7 @@
                                     <li> Quantity: 1,200 Pieces </li>
                                 </ul>
                             </div>
-                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#">Buy Sample ($5)</a><a class="ps-btn" href="#">Make an Offer</a>
+                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#">Buy Sample($5)</a><a class="ps-btn" href="#">Make Offer</a>
                                 <div class="ps-product__actions"><a href="#"><i class="icon-heart"></i></a><a href="#"><i class="icon-chart-bars"></i></a></div>
                             </div>
                         </div>
