--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <!-- General header -->
      <header class="header header--1" data-sticky="true">
         <div class="header__top">
             <div class="ps-container">
@@ -74,12 +75,12 @@
                         <li><a href="shop-default.html">Export Quality Stock</a></li>
                         <li><a href="shop-default.html">QC Rejected Stock</a></li>
                         <li><a href="shop-default.html">Mix Stock</a></li>
+                        <li><a href="store-list.html">Seller List</a></li>
                     </ul>
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
                         <li><a href="#">Sell on RMG Stock</a></li>
-                        <li><a href="#">Tract your order</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
@@ -128,7 +129,7 @@
             </div>
         </div>
         <div class="navigation--mobile">
-            <div class="navigation__left"><a class="ps-logo" href="index-2.html"><img src="img/logo.png" alt=""></a></div>
+            <div class="navigation__left"><a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a></div>
             <div class="navigation__right">
                 <div class="header__actions">
                     <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
