--- a/product-default.html
+++ b/product-default.html
@@ -74,12 +74,12 @@
                         <li><a href="shop-default.html">Export Quality Stock</a></li>
                         <li><a href="shop-default.html">QC Rejected Stock</a></li>
                         <li><a href="shop-default.html">Mix Stock</a></li>
+                        <li><a href="store-list.html">Seller List</a></li>
                     </ul>
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
                         <li><a href="#">Sell on RMG Stock</a></li>
-                        <li><a href="#">Tract your order</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="navigation--mobile">
-            <div class="navigation__left"><a class="ps-logo" href="index-2.html"><img src="img/logo.png" alt=""></a></div>
+            <div class="navigation__left"><a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a></div>
             <div class="navigation__right">
                 <div class="header__actions">
                     <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
@@ -194,7 +194,7 @@
     </div>
 
 
-    <nav class="navigation--mobile-product"><a class="ps-btn ps-btn--black" href="shopping-cart.html">Add to cart</a><a class="ps-btn" href="checkout.html">Buy Now</a></nav>
+    <nav class="navigation--mobile-product"><a class="ps-btn ps-btn--black" href="#">Buy Sample($5)</a><a class="ps-btn" href="#">Make Offer</a></nav>
     <div class="ps-breadcrumb">
         <div class="ps-container">
             <ul class="breadcrumb">
