--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <li><a href="shop-default.html">Export Quality Stock</a></li>
                         <li><a href="shop-default.html">QC Rejected Stock</a></li>
                         <li><a href="shop-default.html">Mix Stock</a></li>
-                        <li><a href="store-list.html">Seller List</a></li>
+                        <!-- <li><a href="store-list.html">Seller List</a></li> -->
                     </ul>
                 </div>
                 <div class="navigation__right">
