--- a/checkout.html
+++ b/checkout.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from nouthemes.net/html/martfury/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:36:58 GMT -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Martfury - Multi Vendor &amp; Marketplace</title>
+    <title>RMG Virtual Marketplace</title>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&amp;amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/Linearicons/Linearicons/Font/demo-files/demo.css">
@@ -29,32 +30,37 @@
 
 <body>
     <!-- General header -->
-     <header class="header header--1" data-sticky="true">
+    <header class="header header--1" data-sticky="true">
         <div class="header__top">
             <div class="ps-container">
                 <div class="header__left">
                     <a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="header__center">
-                    <form class="ps-form--quick-search" action="http://nouthemes.net/html/martfury/index.html" method="get">
+                    <form class="ps-form--quick-search" action="#" method="get">
                         <input class="form-control" type="text" placeholder="I'm shopping for...">
                         <button>Search</button>
                     </form>
                 </div>
                 <div class="header__right">
-                    <div class="header__actions"><a class="header__extra" href="#"><i class="icon-chart-bars"></i><span><i>0</i></span></a><a class="header__extra" href="#"><i class="icon-heart"></i><span><i>0</i></span></a>
-                        <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
+                    <div class="header__actions">
+                        <a class="header__extra" href="#"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
+                        <a class="header__extra" href="#"><i class="icon-heart"></i><span><i>0</i></span></a>
+                        <div class="ps-cart--mini">
+                            <a class="header__extra" href=""><i class="icon-bag2"></i><span><i>0</i></span></a>
                             <div class="ps-cart__content">
                                 <div class="ps-cart__items">
                                     <div class="ps-product--cart-mobile">
-                                        <div class="ps-product__thumbnail"><a href="#"><img src="img/products/clothing/5.jpg" alt=""></a></div>
-                                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
-                                            <p><strong>Sold by:</strong> Muhammad Textile</p><small>1 x $59.99</small>
+                                        <div class="ps-product__thumbnail">
+                                            <a href=""><img src="img/products/clothing/5.jpg" alt=""></a>
+                                        </div>
+                                        <div class="ps-product__content"><a class="ps-product__remove" href=""><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
+                                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="ps-cart__footer">
-                                    <h3>Sub Total:<strong>$59.99</strong></h3>
+                                    <h3>Sub Total:<strong>$5.99</strong></h3>
                                     <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                                 </div>
                             </div>
@@ -79,19 +85,22 @@
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="#">Sell on RMG Stock</a></li>
+                        <li><a href="seller-account.html">Sell on RMG Stock</a></li>
                         <li>
-                            <div class="ps-dropdown"><a href="#">US Dollar</a>
+                            <div class="ps-dropdown"><a href="">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
-                                    <li><a href="#">BD Taka</a></li>
-                                    <li><a href="#">Euro</a></li>
+                                    <li><a href="">BD Taka</a></li>
+                                    <li><a href="">Euro</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li>
-                            <div class="ps-dropdown language"><a href="#"><img src="img/flag/en.png" alt="">English</a>
+                            <div class="ps-dropdown language">
+                                <a href=""><img src="img/flag/en.png" alt="">English</a>
                                 <ul class="ps-dropdown-menu">
-                                    <li><a href="#"><img src="img/flag/fr.png" alt=""> France</a></li>
+                                    <li>
+                                        <a href=""><img src="img/flag/fr.png" alt=""> France</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -109,18 +118,23 @@
             </div>
             <div class="header__right">
                 <ul class="navigation__extra">
-                        <div class="ps-dropdown"><a href="#">BD Taka</a>
-                            <ul class="ps-dropdown-menu">
-                                <li><a href="#">Us Dollar</a></li>
-                                <li><a href="#">Euro</a></li>
-                            </ul>
-                        </div>
+                    <div class="ps-dropdown"><a href="#">BD Taka</a>
+                        <ul class="ps-dropdown-menu">
+                            <li><a href="#">Us Dollar</a></li>
+                            <li><a href="#">Euro</a></li>
+                        </ul>
+                    </div>
                     </li>
                     <li>
-                        <div class="ps-dropdown language"><a href="#"><img src="img/flag/en.png" alt="">English</a>
+                        <div class="ps-dropdown language">
+                            <a href="#"><img src="img/flag/en.png" alt="">English</a>
                             <ul class="ps-dropdown-menu">
-                                <li><a href="#"><img src="img/flag/germany.png" alt=""> Germany</a></li>
-                                <li><a href="#"><img src="img/flag/fr.png" alt=""> France</a></li>
+                                <li>
+                                    <a href="#"><img src="img/flag/germany.png" alt=""> Germany</a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="img/flag/fr.png" alt=""> France</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -128,28 +142,34 @@
             </div>
         </div>
         <div class="navigation--mobile">
-            <div class="navigation__left"><a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a></div>
+            <div class="navigation__left">
+                <a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a>
+            </div>
             <div class="navigation__right">
                 <div class="header__actions">
                     <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
                         <div class="ps-cart__content">
                             <div class="ps-cart__items">
                                 <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail"><a href="#"><img src="img/products/clothing/4.jpg" alt=""></a></div>
+                                    <div class="ps-product__thumbnail">
+                                        <a href="#"><img src="img/products/clothing/4.jpg" alt=""></a>
+                                    </div>
                                     <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
                                     Shorts</a>
-                                        <p><strong>Sold by:</strong> Eco Garments</p><small>1 x $59.99</small>
+                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                                 <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail"><a href="#"><img src="img/products/clothing/5.jpg" alt=""></a></div>
+                                    <div class="ps-product__thumbnail">
+                                        <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
+                                    </div>
                                     <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
-                                        <p><strong>Sold by:</strong> AK Garments</p><small>1 x $59.99</small>
+                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="ps-cart__footer">
-                                <h3>Sub Total:<strong>$59.99</strong></h3>
+                                <h3>Sub Total:<strong>$5.99</strong></h3>
                                 <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                             </div>
                         </div>
@@ -162,7 +182,7 @@
             </div>
         </div>
         <div class="ps-search--mobile">
-            <form class="ps-form--search-mobile" action="http://nouthemes.net/html/martfury/index.html" method="get">
+            <form class="ps-form--search-mobile" action="#" method="get">
                 <div class="form-group--nest">
                     <input class="form-control" type="text" placeholder="Search something...">
                     <button><i class="icon-magnifier"></i></button>
@@ -179,14 +199,16 @@
             <div class="ps-cart--mobile">
                 <div class="ps-cart__content">
                     <div class="ps-product--cart-mobile">
-                        <div class="ps-product__thumbnail"><a href="#"><img src="img/products/clothing/7.jpg" alt=""></a></div>
+                        <div class="ps-product__thumbnail">
+                            <a href="#"><img src="img/products/clothing/7.jpg" alt=""></a>
+                        </div>
                         <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
-                            <p><strong>Sold by:</strong> YOUNG SHOP</p><small>1 x $59.99</small>
+                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                         </div>
                     </div>
                 </div>
                 <div class="ps-cart__footer">
-                    <h3>Sub Total:<strong>$59.99</strong></h3>
+                    <h3>Sub Total:<strong>$5.99</strong></h3>
                     <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                 </div>
             </div>
@@ -209,7 +231,7 @@
                     <h1>Checkout</h1>
                 </div>
                 <div class="ps-section__content">
-                    <form class="ps-form--checkout" action="http://nouthemes.net/html/martfury/do_action" method="post">
+                    <form class="ps-form--checkout" action="#" method="post">
                         <div class="row">
                             <div class="col-xl-7 col-lg-8 col-md-12 col-sm-12  ">
                                 <div class="ps-form__billing-info">
@@ -322,16 +344,98 @@
         </div>
     </div>
     <!--include ../../partials/sections/newsletter-->
-    <!--include ../../shared/footers/footer-->
+    <footer class="ps-footer ps-footer--3">
+        <div class="ps-container">
+            <div class="ps-block--site-features ps-block--site-features-2">
+                <div class="ps-block__item">
+                    <div class="ps-block__left"><i class="icon-rocket"></i></div>
+                    <div class="ps-block__right">
+                        <h4>Preview Sample</h4>
+                        <p>Get Sample Product</p>
+                    </div>
+                </div>
+                <div class="ps-block__item">
+                    <div class="ps-block__left"><i class="icon-sync"></i></div>
+                    <div class="ps-block__right">
+                        <h4>Verified Seller</h4>
+                        <p>By BGMEA Authority</p>
+                    </div>
+                </div>
+                <div class="ps-block__item">
+                    <div class="ps-block__left"><i class="icon-credit-card"></i></div>
+                    <div class="ps-block__right">
+                        <h4>Secure Payment</h4>
+                        <p>100% secure payment</p>
+                    </div>
+                </div>
+                <div class="ps-block__item">
+                    <div class="ps-block__left"><i class="icon-bubbles"></i></div>
+                    <div class="ps-block__right">
+                        <h4>24/7 Support</h4>
+                        <p>Dedicated support</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ps-footer__widgets">
+                <aside class="widget widget_footer widget_contact-us">
+                    <h4 class="widget-title">Contact us</h4>
+                    <div class="widget_content">
+                        <p>Call us 24/7</p>
+                        <h3>+88 01730442211</h3>
+                        <p>BGMEA Complex, House # 7/7A, Sector # 17, Block # H-1, Uttara, Dhaka - 1230, Bangladesh. </p>
+                        <ul class="ps-list--social">
+                            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <aside class="widget widget_footer">
+                    <h4 class="widget-title">Quick links</h4>
+                    <ul class="ps-list--link">
+                        <li><a href="#">Policy</a></li>
+                        <li><a href="#">Term & Condition</a></li>
+                        <li><a href="#">Shipping</a></li>
+                        <li><a href="#">FAQs</a></li>
+                    </ul>
+                </aside>
+                <aside class="widget widget_footer">
+                    <h4 class="widget-title">BGMEA</h4>
+                    <ul class="ps-list--link">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Our Press</a></li>
+                    </ul>
+                </aside>
+                <aside class="widget widget_footer">
+                    <h4 class="widget-title">Others</h4>
+                    <ul class="ps-list--link">
+                        <li><a href="checkout.html">Checkout</a></li>
+                        <li><a href="my-account.html">My account</a></li>
+                        <li><a href="shop-default.html">Shop</a></li>
+                    </ul>
+                </aside>
+            </div>
+
+            <div class="ps-footer__copyright">
+                <p>Developed by SSL Wireless</p>
+                <a href="#"><img src="img/payment-method/footer-ssl.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- back to top -->
     <div id="back2top"><i class="pe-7s-angle-up"></i></div>
     <div class="ps-site-overlay"></div>
     <div id="loader-wrapper">
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
     </div>
-    <div class="ps-search" id="site-search"><a class="ps-btn--close" href="#"></a>
+    <div class="ps-search" id="site-search">
+        <a class="ps-btn--close" href="#"></a>
         <div class="ps-search__content">
-            <form class="ps-form--primary-search" action="http://nouthemes.net/html/martfury/do_action" method="post">
+            <form class="ps-form--primary-search" action="#" method="post">
                 <input class="form-control" type="text" placeholder="Search for...">
                 <button><i class="aroma-magnifying-glass"></i></button>
             </form>
@@ -403,8 +507,14 @@
     <!-- custom scripts-->
     <script src="js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxflHHc5FlDVI-J71pO7hM1QJNW1dRp4U&amp;region=GB"></script>
+
+    <script>
+        // $("a[href='\\#']").addClass('reza');
+        $("a[href='\\#']").wrap("<div class='prototype-text'></div>");
+    </script>
 </body>
 
 
 <!-- Mirrored from nouthemes.net/html/martfury/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:36:58 GMT -->
+
 </html>
