--- a/my-account.html
+++ b/my-account.html
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Martfury - Multi Vendor &amp; Marketplace</title>
+    <title>RMG Virtual Marketplace</title>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&amp;amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/Linearicons/Linearicons/Font/demo-files/demo.css">
@@ -39,27 +39,30 @@
                     <a class="ps-logo" href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="header__center">
-                    <form class="ps-form--quick-search" action="http://nouthemes.net/html/martfury/index.html" method="get">
+                    <form class="ps-form--quick-search" action="#" method="get">
                         <input class="form-control" type="text" placeholder="I'm shopping for...">
                         <button>Search</button>
                     </form>
                 </div>
                 <div class="header__right">
-                    <div class="header__actions"><a class="header__extra" href="#"><i class="icon-chart-bars"></i><span><i>0</i></span></a><a class="header__extra" href="#"><i class="icon-heart"></i><span><i>0</i></span></a>
-                        <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
+                    <div class="header__actions">
+                        <a class="header__extra" href="#"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
+                        <a class="header__extra" href="#"><i class="icon-heart"></i><span><i>0</i></span></a>
+                        <div class="ps-cart--mini">
+                            <a class="header__extra" href=""><i class="icon-bag2"></i><span><i>0</i></span></a>
                             <div class="ps-cart__content">
                                 <div class="ps-cart__items">
                                     <div class="ps-product--cart-mobile">
                                         <div class="ps-product__thumbnail">
-                                            <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
+                                            <a href=""><img src="img/products/clothing/5.jpg" alt=""></a>
                                         </div>
-                                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
-                                            <p><strong>Sold by:</strong> Muhammad Textile</p><small>1 x $59.99</small>
+                                        <div class="ps-product__content"><a class="ps-product__remove" href=""><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
+                                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="ps-cart__footer">
-                                    <h3>Sub Total:<strong>$59.99</strong></h3>
+                                    <h3>Sub Total:<strong>$5.99</strong></h3>
                                     <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                                 </div>
                             </div>
@@ -79,26 +82,26 @@
                         <li><a href="shop-default.html">Export Quality Stock</a></li>
                         <li><a href="shop-default.html">QC Rejected Stock</a></li>
                         <li><a href="shop-default.html">Mix Stock</a></li>
-                        <li><a href="store-list.html">Seller List</a></li>
+                        <!-- <li><a href="store-list.html">Seller List</a></li> -->
                     </ul>
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="#">Sell on RMG Stock</a></li>
+                        <li><a href="seller-account.html">Sell on RMG Stock</a></li>
                         <li>
-                            <div class="ps-dropdown"><a href="#">US Dollar</a>
+                            <div class="ps-dropdown"><a href="">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
-                                    <li><a href="#">BD Taka</a></li>
-                                    <li><a href="#">Euro</a></li>
+                                    <li><a href="">BD Taka</a></li>
+                                    <li><a href="">Euro</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <div class="ps-dropdown language">
-                                <a href="#"><img src="img/flag/en.png" alt="">English</a>
+                                <a href=""><img src="img/flag/en.png" alt="">English</a>
                                 <ul class="ps-dropdown-menu">
                                     <li>
-                                        <a href="#"><img src="img/flag/fr.png" alt=""> France</a>
+                                        <a href=""><img src="img/flag/fr.png" alt=""> France</a>
                                     </li>
                                 </ul>
                             </div>
@@ -155,7 +158,7 @@
                                     </div>
                                     <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
                                     Shorts</a>
-                                        <p><strong>Sold by:</strong> Eco Garments</p><small>1 x $59.99</small>
+                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                                 <div class="ps-product--cart-mobile">
@@ -163,12 +166,12 @@
                                         <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
                                     </div>
                                     <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
-                                        <p><strong>Sold by:</strong> AK Garments</p><small>1 x $59.99</small>
+                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="ps-cart__footer">
-                                <h3>Sub Total:<strong>$59.99</strong></h3>
+                                <h3>Sub Total:<strong>$5.99</strong></h3>
                                 <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                             </div>
                         </div>
@@ -181,7 +184,7 @@
             </div>
         </div>
         <div class="ps-search--mobile">
-            <form class="ps-form--search-mobile" action="http://nouthemes.net/html/martfury/index.html" method="get">
+            <form class="ps-form--search-mobile" action="#" method="get">
                 <div class="form-group--nest">
                     <input class="form-control" type="text" placeholder="Search something...">
                     <button><i class="icon-magnifier"></i></button>
@@ -202,12 +205,12 @@
                             <a href="#"><img src="img/products/clothing/7.jpg" alt=""></a>
                         </div>
                         <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
-                            <p><strong>Sold by:</strong> YOUNG SHOP</p><small>1 x $59.99</small>
+                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                         </div>
                     </div>
                 </div>
                 <div class="ps-cart__footer">
-                    <h3>Sub Total:<strong>$59.99</strong></h3>
+                    <h3>Sub Total:<strong>$5.99</strong></h3>
                     <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                 </div>
             </div>
@@ -227,9 +230,9 @@
             </div>
             <div class="ps-my-account">
                 <div class="container">
-                    <form class="ps-form--account ps-tab-root" action="http://nouthemes.net/html/martfury/link.html" method="get">
+                    <form class="ps-form--account ps-tab-root" action="#" method="get">
                         <ul class="ps-tab-list">
-                            <li class="active"><a href="#sign-in">Login</a></li>
+                            <li class="active"><a href="#sign-in">Buyer Login</a></li>
                             <li><a href="#register">Register</a></li>
                         </ul>
                         <div class="ps-tabs">
@@ -264,7 +267,7 @@
                             </div>
                             <div class="ps-tab" id="register">
                                 <div class="ps-form__content">
-                                    <h5>Register An Account</h5>
+                                    <h5>Register Buyer Account</h5>
                                     <div class="form-group">
                                         <input class="form-control" type="text" placeholder="Name">
                                     </div>
@@ -275,18 +278,7 @@
                                         <input class="form-control" type="text" placeholder="HQ Address">
                                     </div>
                                     <div class="form-group">
-                                        <label>Trade License</label>
-                                        <input class="form-control" type="file">
-                                    </div>
-                                    <div class="form-group">
                                         <input class="form-control" type="number" placeholder="Buying House Number">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleFormControlSelect1">Verified by</label>
-                                        <select class="form-control" id="exampleFormControlSelect1">
-                                          <option>Select</option>
-                                          <option>ACCORD</option>
-                                        </select>
                                     </div>
 
                                     <!--
@@ -295,7 +287,7 @@
                                     </div>
                                     --->
                                     <div class="form-group submtit">
-                                        <button class="ps-btn ps-btn--fullwidth">Login</button>
+                                        <button class="ps-btn ps-btn--fullwidth">Create an Account</button>
                                     </div>
                                 </div>
                                 <div class="ps-form__footer">
@@ -316,7 +308,7 @@
     </div>
 
 
-    <footer class="ps-footer ps-footer--3" style="margin-top:0;">
+    <footer class="ps-footer ps-footer--3">
         <div class="ps-container">
             <div class="ps-block--site-features ps-block--site-features-2">
                 <div class="ps-block__item">
@@ -369,14 +361,14 @@
                         <li><a href="#">Policy</a></li>
                         <li><a href="#">Term & Condition</a></li>
                         <li><a href="#">Shipping</a></li>
-                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="#">FAQs</a></li>
                     </ul>
                 </aside>
                 <aside class="widget widget_footer">
                     <h4 class="widget-title">BGMEA</h4>
                     <ul class="ps-list--link">
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="contact-us.html">Contact</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#">Our Press</a></li>
                     </ul>
                 </aside>
@@ -392,13 +384,7 @@
 
             <div class="ps-footer__copyright">
                 <p>Developed by SSL Wireless</p>
-                <p><span>We Using Safe Payment For:</span>
-                    <a href="#"><img src="img/payment-method/1.png" alt=""></a>
-                    <a href="#"><img src="img/payment-method/2.jpg" alt=""></a>
-                    <a href="#"><img src="img/payment-method/3.jpg" alt=""></a>
-                    <a href="#"><img src="img/payment-method/5.jpg" alt=""></a>
-                    <a href="#"><img src="img/payment-method/6.png" alt=""></a>
-                </p>
+                <a href="#"><img src="img/payment-method/footer-ssl.png" alt=""></a>
             </div>
         </div>
     </footer>
@@ -413,7 +399,7 @@
     <div class="ps-search" id="site-search">
         <a class="ps-btn--close" href="#"></a>
         <div class="ps-search__content">
-            <form class="ps-form--primary-search" action="http://nouthemes.net/html/martfury/do_action" method="post">
+            <form class="ps-form--primary-search" action="#" method="post">
                 <input class="form-control" type="text" placeholder="Search for...">
                 <button><i class="aroma-magnifying-glass"></i></button>
             </form>
@@ -446,10 +432,11 @@
                                     </select><span>(1 review)</span>
                                 </div>
                             </div>
-                            <h4 class="ps-product__price">$3500</h4>
+                            <h4 class="ps-product__price">$5.00</h4>
                             <div class="ps-product__desc">
                                 <p>Sold By:<a href="shop-default.html"><strong> Muhammad Textile</strong></a></p>
                                 <ul class="ps-list--dot">
+                                    <li> <b>Unit Price: $5.00</b></li>
                                     <li> Care Instructions: Gentle Machine Wash Onl</li>
                                     <li> Fit Type: Slim Fit </li>
                                     <li> Fabric: Cotton </li>
@@ -491,6 +478,11 @@
     <!-- custom scripts-->
     <script src="js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxflHHc5FlDVI-J71pO7hM1QJNW1dRp4U&amp;region=GB"></script>
+
+    <script>
+        // $("a[href='\\#']").addClass('reza');
+        $("a[href='\\#']").wrap("<div class='prototype-text'></div>");
+    </script>
 </body>
 
 
